--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "flowbite": "^1.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
