--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,21 @@
   "proxy": "http://127.0.0.1:3000",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.2",
+    "@mui/x-date-pickers": "^6.10.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "flowbite": "^1.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-select-datepicker": "^2.1.2",
     "recoil": "^0.7.7",
     "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4"
