--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
     "dayjs": "^1.11.9",
     "flowbite": "^1.7.0",
     "react": "^18.2.0",
